Fixing issue with quiz taking up too much space

--- a/styles/_footer.scss
+++ b/styles/_footer.scss
@@ -1,16 +1,11 @@
-@mixin flexCenter($direction) {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: $direction;
-}
-
 footer {
-    @include flexCenter(column);
     width: 100%;
     height: 80px;
     background-color: rgb(251, 250, 253);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 
 @media screen and (min-width: $largeScreen) {
