--- a/styles/_quiz.scss
+++ b/styles/_quiz.scss
@@ -8,12 +8,14 @@
     margin: 2em auto 2em auto;
     box-shadow: 3px 7px 10px rgba($color: #000000, $alpha: .42);
     transition: border 100ms ease;
+    position: relative;
 }
 
 .question-box{
     visibility: hidden;
     position: absolute;
     opacity: 0;
+    top: 0;
     transition: opacity 300ms ease-in;
     text-align: center;
     .question{
